# MIA_apklis-req-mining

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements-lock.txt
docs/: ARQUITECTURA.md  GLOSARIO.md  PROYECTO.md  bitacora-experimentos.md
nucleo/: __init__.py  pipeline.py
nucleo/clasificacion/: __init__.py
nucleo/evaluacion/: __init__.py  metricas.py
nucleo/extraccion/: __init__.py  anonimizacion.py  apklis.py  corpus.py
nucleo/preprocesamiento/: __init__.py
nucleo/representacion/: __init__.py  semantica.py  tfidf.py
tests/: test_extraccion_apklis.py  test_placeholder.py
webapp/: manage.py
webapp/apps/opiniones/: apps.py
webapp/apps/requisitos/: apps.py  models.py  urls.py  views.py
webapp/apps/requisitos/migrations/: 0001_initial.py
webapp/apps/usuarios/: apps.py  views.py
webapp/apps/validacion/: apps.py
webapp/config/: settings.py  urls.py  wsgi.py
webapp/templates/: base.html
webapp/templates/evaluacion/: detalle.html  lista.html
