[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mia"
version = "0.1.0"
description = "Método de identificación de requisitos desde opiniones de usuarios (Apklis)"
requires-python = ">=3.12"
dependencies = [
    # PLN / ML
    "spacy>=3.8",
    "sentence-transformers>=3.0",
    "transformers>=4.44",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    # Web
    "django>=5.1",
    "djangorestframework>=3.15",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9",
    # Utilidades
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "webapp.config.settings"

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleo*", "webapp*"]
